src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>First_Contract_Start_Date__c</fullName>
        <description>Roll up from Opportunity for earliest contract start date.</description>
        <inlineHelpText>Indicates date this account first became a customer.</inlineHelpText>
        <label>First Contract Start Date</label>
        <summarizedField>Opportunity.Contract_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Corp Solutions - Renewal, Corp Solutions, LDC Solutions, LDC Solutions - Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Online_CAP_Start_Date__c</fullName>
        <description>First Contract Start Date of Active Online Cap Contract (excludes Free Trial Promotions)</description>
        <label>First Online CAP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <description>Hoover&apos;s Fiscal Year End</description>
        <inlineHelpText>Hoover&apos;s Fiscal Year End</inlineHelpText>
        <label>Fiscal Year End</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_of_Customer__c</fullName>
        <description>Case #08268249</description>
        <label>Fiscal Year of Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Non-employee company followers</inlineHelpText>
        <label>Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fortune_Classification__c</fullName>
        <description>Global Fortune 500</description>
        <inlineHelpText>Global Fortune 500</inlineHelpText>
        <label>Global Fortune 500</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Used to calculate staffing SOP - see case 00797626 - https://na4.salesforce.com/5006000000QBtnS</description>
        <inlineHelpText>Staffing Function</inlineHelpText>
        <label>Function</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Search</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Territory__c</fullName>
        <description>What geographic territory does this account belong to?</description>
        <inlineHelpText>What geographic territory does this account belong to?</inlineHelpText>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Glint_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Glint Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These accounts and related opportunities will be managed by the Global Account Owner and Local Sub Owners.</description>
        <label>Global Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Label__c</fullName>
        <label>HQ Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ultimate Parent HQ</fullName>
                </value>
                <value>
                    <fullName>Parent HQ</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQ_Phone__c</fullName>
        <description>Phone number of company Headquarters location for territory assignment processing.</description>
        <label>HQ Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HS_Closed_Won__c</fullName>
        <label>HS_Closed_Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handled_By_Customer_Master__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Prospect creation is being Handled By Customer Master</description>
        <inlineHelpText>Prospect creation is being Handled By Customer Master</inlineHelpText>
        <label>Handled By Customer Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_Impacted__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Number of impacted hires</inlineHelpText>
        <label>Hires Impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hire_Type__c</fullName>
        <description>Used to calculate staffing SOP - see case 00797626 - https://na4.salesforce.com/5006000000QBtnS</description>
        <inlineHelpText>Staffing Hire Type</inlineHelpText>
        <label>Hire Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Temp-to-Perm</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Direct Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_Over_Expiration__c</fullName>
        <description>For LTS only. This is the date that the hold over expires and should be moved back to the correct territory.</description>
        <inlineHelpText>For LTS only. This is the date that the hold over expires and should be moved back to the correct territory.</inlineHelpText>
        <label>LTS Hold Over Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Holder_Size__c</fullName>
        <description>What is the size of this Account&apos;s holdings?</description>
        <inlineHelpText>What is the size of this Account&apos;s holdings?</inlineHelpText>
        <label>Holder Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holder_of_LinkedIn__c</fullName>
        <description>Does this Account hold LinkedIn stock?</description>
        <inlineHelpText>Does this Account hold LinkedIn stock?</inlineHelpText>
        <label>Holder of LinkedIn</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Style__c</fullName>
        <description>What type of Holding Style (Assets) does this account have?</description>
        <inlineHelpText>What type of Holding Style (Assets) does this account have?</inlineHelpText>
        <label>Holding Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive Growth</fullName>
                </value>
                <value>
                    <fullName>Deep Value</fullName>
                </value>
                <value>
                    <fullName>GARP</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Yield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hoover_s_Industry__c</fullName>
        <description>Hoover&apos;s primary and secondary industries</description>
        <inlineHelpText>Hoover&apos;s primary and secondary industries. Data is synced wtih Hoover&apos;s app industry.</inlineHelpText>
        <label>Hoover&apos;s Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HooversId__c</fullName>
        <label>HooversId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hoovers_Account_Name__c</fullName>
        <description>Account Name as defined in Hoovers.</description>
        <inlineHelpText>Account Name as defined in Hoovers.</inlineHelpText>
        <label>Hoovers Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_15_Char__c</fullName>
        <description>This field truncates 18 digit record Id to 15 digit</description>
        <formula>IF(LEN(Id)=18, RIGHT(Id , 15),Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID 15 Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_DUNS__c</fullName>
        <description>Hoover&apos;s Immediate Parent DUNS #</description>
        <inlineHelpText>Hoover&apos;s Immediate Parent DUNS #</inlineHelpText>
        <label>Immediate Parent DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_Name__c</fullName>
        <description>Hoover&apos;s Immediate Parent Name</description>
        <inlineHelpText>Hoover&apos;s Immediate Parent Name</inlineHelpText>
        <label>Immediate Parent Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <inlineHelpText>Date that account became inactive.</inlineHelpText>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_Focus_Nonprofit__c</fullName>
        <label>Industry Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Focus__c</fullName>
        <description>Industry focus used for staffing companies only</description>
        <inlineHelpText>Industry focus of staffing companies.</inlineHelpText>
        <label>Industry Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accountancy</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering (non-IT)</fullName>
                </value>
                <value>
                    <fullName>Executive/Management</fullName>
                </value>
                <value>
                    <fullName>Executive Search</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Generalist</fullName>
                </value>
                <value>
                    <fullName>High-Tech</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health Care</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Light Industrial</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Office-Clerical</fullName>
                </value>
                <value>
                    <fullName>Oil/Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Rec2Rec</fullName>
                </value>
                <value>
                    <fullName>RPO &amp; Outsourced HR Services</fullName>
                </value>
                <value>
                    <fullName>Sales/Marketing</fullName>
                </value>
                <value>
                    <fullName>Scientific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Insights_LTS_LTV_Tier__c</fullName>
        <description>LTS LTV Tier from on Acount</description>
        <formula>Insights__r.LTS_LTV_tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insights LTS LTV Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_Hires__c</fullName>
        <description># Hires in that sub-region associated to all LI Co IDs in the hierarchy - this is used in Reports by fields. Main source of truth for this data is Insights.</description>
        <formula>Insights__r.Regional_Family_Hires__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Hires in that sub-region associated to all LI Co IDs in the hierarchy</inlineHelpText>
        <label>Regional Family Hires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_Jobs__c</fullName>
        <description># Jobs in that sub-region associated to all LI Co IDs in the hierarchy- Used in reports only and main data is stored in sights object</description>
        <formula>Insights__r.Regional_Family_Jobs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Jobs in that sub-region associated to all LI Co IDs in the hierarchy</inlineHelpText>
        <label>Regional Family Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_Members__c</fullName>
        <description># Members in that sub-region* associated to all LI Co IDs in the hierarchy - used only on reports and main source of data is Insights</description>
        <formula>Insights__r.Regional_Family_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Members in that sub-region* associated to all LI Co IDs in the hierarchy</inlineHelpText>
        <label>Regional Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_Recruiters__c</fullName>
        <description># Recruiters in that sub-region associated to all LI Co IDs in the hierarchy- used in reports only and main source of data is Insights</description>
        <formula>Insights__r.Regional_Family_Recruiters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Recruiters in that sub-region associated to all LI Co IDs in the hierarchy</inlineHelpText>
        <label>Regional Family Recruiters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_SOP__c</fullName>
        <description>SOP Calculated based on the regional fields listed above - used in reports only and source of data is Insights</description>
        <formula>Insights__r.Regional_Family_SOP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SOP Calculated based on the regional fields listed above</inlineHelpText>
        <label>Regional Family SOP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights_Regional_Family_Subscriptions__c</fullName>
        <description># Premium subscriptions in that sub-region associated to all LI Co IDs in the hierarchy - used in reports only and source of data is Insights</description>
        <formula>Insights__r.Regional_Family_Subscriptions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># Premium subscriptions in that sub-region associated to all LI Co IDs in the hierarchy</inlineHelpText>
        <label>Regional Family Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insights__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insights record lookup on account, being used for reporting purposes.</description>
        <inlineHelpText>Insights record lookup on account, being used for reporting purposes.</inlineHelpText>
        <label>Insights</label>
        <referenceTo>Insights__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor_Type__c</fullName>
        <description>What type of Investors are the Analysts at this Account?</description>
        <inlineHelpText>What type of Investors are the Analysts at this Account?</inlineHelpText>
        <label>Investor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Family Office</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund Manager</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Investment Adviser</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund Management</fullName>
                </value>
                <value>
                    <fullName>Open-End Fund</fullName>
                </value>
                <value>
                    <fullName>Pension Fund Manager</fullName>
                </value>
                <value>
                    <fullName>Private Banking/Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Public Company</fullName>
                </value>
                <value>
                    <fullName>Sovereign Wealth Manager</fullName>
                </value>
                <value>
                    <fullName>Venture Capital/Private Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Irish_VAT_13B__c</fullName>
        <description>If customer is located in Ireland, Irish VAT 13B is required. If customer is located in Brazil, CCM tax ID is required</description>
        <inlineHelpText>If customer is located in Ireland, Irish VAT 13B is required. If customer is located in Brazil, CCM tax ID is required</inlineHelpText>
        <label>Irish VAT 13B</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Hold_button_used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to check whether &apos;LTS Account Hold&apos; button is filled via &apos;Hold&apos; button.
https://linkedin.my.salesforce.com/a1W32000002G4lzEAC</description>
        <label>Is Hold button used?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_LinkedIn_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for lookup filters in Apttus.</description>
        <inlineHelpText>Checked if Account is a LinkedIn Entity (Internal Account).</inlineHelpText>
        <label>Is LinkedIn Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Distributor__c</fullName>
        <inlineHelpText>Which job distributor does the client currently use?</inlineHelpText>
        <label>Job Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arbita</fullName>
                </value>
                <value>
                    <fullName>Avature</fullName>
                </value>
                <value>
                    <fullName>Broadbean</fullName>
                </value>
                <value>
                    <fullName>eQuest</fullName>
                </value>
                <value>
                    <fullName>First Advantage/PostmasterLX</fullName>
                </value>
                <value>
                    <fullName>Hiring Solutions</fullName>
                </value>
                <value>
                    <fullName>Hodes/SmartPost</fullName>
                </value>
                <value>
                    <fullName>Jibe</fullName>
                </value>
                <value>
                    <fullName>Jobs2Web</fullName>
                </value>
                <value>
                    <fullName>Job VIPer</fullName>
                </value>
                <value>
                    <fullName>Jobvite</fullName>
                </value>
                <value>
                    <fullName>JWT Inside</fullName>
                </value>
                <value>
                    <fullName>JXT</fullName>
                </value>
                <value>
                    <fullName>Kaonix</fullName>
                </value>
                <value>
                    <fullName>Knollenstein</fullName>
                </value>
                <value>
                    <fullName>LogicMelon</fullName>
                </value>
                <value>
                    <fullName>Lumesse</fullName>
                </value>
                <value>
                    <fullName>MaxHire</fullName>
                </value>
                <value>
                    <fullName>Multiposting.fr</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PageUpPeople</fullName>
                </value>
                <value>
                    <fullName>RFLEX</fullName>
                </value>
                <value>
                    <fullName>SmartPost</fullName>
                </value>
                <value>
                    <fullName>Smart Recruiters</fullName>
                </value>
                <value>
                    <fullName>SmashFly</fullName>
                </value>
                <value>
                    <fullName>StepStone</fullName>
                </value>
                <value>
                    <fullName>TMP/Job VIPer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Posts_Slots__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Jobs posted in the last month divided by the number of job slots</inlineHelpText>
        <label>Job Slot Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Job_Slots__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>Job slots</inlineHelpText>
        <label>Job Slots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs_Gap__c</fullName>
        <formula>IF( leo_Hires_Last_12M__c &lt;=100, leo_Hires_Last_12M__c /3, leo_Hires_Last_12M__c /5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jobs Gap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs_Group_Treatment_Code__c</fullName>
        <label>Jobs Group Treatment Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jobs_on_Website__c</fullName>
        <description>How many jobs does the company have posted on their website?</description>
        <inlineHelpText>How many jobs does the company have posted on their website?</inlineHelpText>
        <label>Jobs on Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 25</fullName>
                </value>
                <value>
                    <fullName>26 - 50</fullName>
                </value>
                <value>
                    <fullName>51 - 100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction_Emailed__c</fullName>
        <description>This field is used to track the Tax Inquiry emails sent to the opportunity owners based on the jurisdiction.</description>
        <inlineHelpText>This field is used to track the Tax Inquiry emails sent to the opportunity owners based on the jurisdiction.</inlineHelpText>
        <label>Jurisdiction Emailed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATAM_Multi_Regional_RM__c</fullName>
        <label>LATAM Multi-Regional RM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_URL__c</fullName>
        <description>URL to get to the career page of the account.</description>
        <inlineHelpText>URL to get to the career page of the account.</inlineHelpText>
        <label>LCP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LCP__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>What type of career page the client has (if applicable)</inlineHelpText>
        <label>LCP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCP_activated__c</fullName>
        <description>PMAT</description>
        <inlineHelpText>If the career page is activated</inlineHelpText>
        <label>LCP activated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Account_Hold__c</fullName>
        <description>Indicates if the account AE/RM hold</description>
        <inlineHelpText>Indicates if the account AE/RM hold</inlineHelpText>
        <label>LDC Account Hold</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Segment__c</fullName>
        <description>To store LDC Account Segment for Lynda</description>
        <label>LDC Account Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBS</fullName>
                </value>
                <value>
                    <fullName>MME</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>HIG</fullName>
                </value>
                <value>
                    <fullName>LEN</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>RPO</fullName>
                </value>
                <value>
                    <fullName>FED</fullName>
                </value>
                <value>
                    <fullName>SNL</fullName>
                </value>
                <value>
                    <fullName>K12</fullName>
                </value>
                <value>
                    <fullName>HED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Account_Status__c</fullName>
        <description>Used to capture the status of the equivalent account in the Lynda.com SFDC instance</description>
        <inlineHelpText>Used to capture the status of the equivalent account in the Lynda.com SFDC instance</inlineHelpText>
        <label>LDC Account Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Free_Trial_Limit_Approval_Date__c</fullName>
        <description>use to track date of last approval to exceed free trial limit</description>
        <label>LDC Free Trial Limit Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDC_Hold_Over_Expiration__c</fullName>
        <description>To store LDC Hold Over Expiration for Lynda</description>
        <label>LDC Hold Over Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDC_Legacy_Account_Id__c</fullName>
        <description>This field is used by Lynda.com project for migration records from Lynda.com Org to LinkedIn.com Org</description>
        <externalId>true</externalId>
        <label>LDC Legacy Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>